se creo servlet y clases, un solo commit, porque cree el primer proyecto mal

--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <!--Enlaces para uso de boostrap-->
+       <!--Enlaces para uso de boostrap-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
     </head>
@@ -21,26 +22,26 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
             <a href="ServletLibro">Click Aquí</a>
         
         <!-- Inicio del Formulario -->
-        <form action="ServletLib">
+        <form action="ServletLibro">
             <div class="form-group">
               <label for="exampleInputCode">Código del Libro</label>
-              <input class="form-control" type="text" placeholder="ingrese el código del libro" name="codigo">
+              <input class="form-control" type="text" placeholder="ingrese el código del libro" name="code">
             </div>
             <div class="form-group">
               <label for="exampleInputName">Nombre del Libro</label>
-              <input class="form-control" type="text" placeholder="ingrese el nombre del libro" name="nombre">
+              <input class="form-control" type="text" placeholder="ingrese el nombre del libro" name="name">
             </div>
             <div class="form-group">
               <label for="exampleInputPast">Tipo de Pasta</label>
-              <input class="form-control" type="text" placeholder="¿qué pasta es?" name="pasta">
+              <input class="form-control" type="text" placeholder="¿qué pasta es?" name="past">
              </div>
             <div class="form-group">
               <label for="exampleInputEdit">Editorial del Libro</label>
-              <input class="form-control" type="text" placeholder="ingrese la editorial" name="editorial">
+              <input class="form-control" type="text" placeholder="ingrese la editorial" name="edit">
              </div>
             <div class="form-group">
               <label for="exampleInputYear">Año de Publicación</label>
-              <input class="form-control" type="text" placeholder="ingrese el año de publicación del libro" name="año">
+              <input class="form-control" type="text" placeholder="ingrese el año de publicación del libro" name="year">
             </div>
         
             <button type="submit" class="btn btn-primary">Guardar</button>
